2008-04-18  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Alexey.

        http://bugs.webkit.org/show_bug.cgi?id=18357
        [GTK] Enter on buttons doesn't work

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::singleCharacterString): Set the text of a keyboard event for
        GDK_ISO_Enter, GDK_KP_Enter, GDK_Return to "\r" instead of an empty
        string.


Canonical link: https://commits.webkit.org/25601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32246 268f45cc-cd09-0410-ab3c-d52691b4dbfc